[package]
name = "condition-tree"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Matthew Planchard <msplanchard@gmail.com>", "Jay Cunningham", "Rachel Kelmenson"]
description = "Generic splitting of async streams"
homepage = "https://github.com/spectrust/condition-tree"

[dependencies]
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "macros"] }

[lints.clippy]
future_not_send = "warn"
